--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -1,21 +1,44 @@
-.bg-primary {
-    background-color: teal !important;
-}
+// .bg-primary {
+//     background-color: teal !important;
+// }
 
-.trykker-regular {
+.trykker_regular {
     font-family: "Trykker", serif;
     font-weight: 400;
     font-style: normal;
 }
 
-.agbalumo-regular {
+.agbalumo_regular {
     font-family: "Agbalumo", system-ui;
     font-weight: 400;
     font-style: normal;
 }
 
-.poppins-regular {
+.poppins_regular {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+.iCustom {
+    border: 1px solid;
+    border-radius: 100px;
+    padding: 0.5rem;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    // background-color: #333;
+    color: #fff;
+    text-align: center;
 }
